...
                    // Update the state to make the tree evaluate tick box
                    // automatically selected after the model build.

                    ref.read(treeEvaluateProvider.notifier).state = true;
                  }
                },
                child: const Text('Build Decision Tree'),
              ),
              Text('Target: ${getTarget(ref)}'),
              ChoiceChipTip<AlgorithmType>(
                options: AlgorithmType.values,
                getLabel: (AlgorithmType type) => type.displayName,
                selectedOption: selectedAlgorithm,
...

          Row(
            spacing: configWidgetSpace,
            children: [
              NumberField(
                label: 'Min Split:',
                key: const Key('minSplitField'),
                controller: _minSplitController,
                tooltip: '''

                **Min Split**

                Set the minimum number of observations that must
...
                validator: (value) => validateInteger(value, min: -1),
                min: -1,
                stateProvider: treeMinSplitProvider,
              ),
              NumberField(
                label: 'Min Bucket:',
                key: const Key('minBucketField'),
                controller: _minBucketController,
                tooltip: '''

                **Min Bucket**

                Set the minimum number of observations allowed
...
                validator: (value) => validateInteger(value, min: 1),
                min: 1,
                stateProvider: treeMinBucketProvider,
              ),
              NumberField(
                label: 'Max Depth:',
                key: const Key('maxDepthField'),
                controller: _maxDepthController,
                tooltip: '''

                **Max Depth**

                Set the maximum depth of any node of the final
...
                min: 0,
                max: maxDepthLimit,
                stateProvider: treeMaxDepthProvider,
              ),
              NumberField(
                label: 'Complexity:',
                key: const Key('complexityField'),
                controller: _complexityController,
                tooltip: '''

                **Complexity**

                The complexity parameter is used to control the
...
                interval: 0.0005,
                decimalPlaces: 4,
              ),
              BuildTextField(
                label: 'Priors:',
                controller: _priorsController,
                key: const Key('priorsField'),
                textStyle: selectedAlgorithm == AlgorithmType.conditional
                    ? disabledTextStyle
                    : normalTextStyle,
                tooltip: '''

                **Priors**
...
                maxWidth: 10,
                ref: ref,
              ),
              BuildTextField(
                label: 'Loss Matrix:',
                controller: _lossMatrixController,
                key: const Key('lossMatrixField'),
                textStyle: selectedAlgorithm == AlgorithmType.conditional
                    ? disabledTextStyle
                    : normalTextStyle,
                tooltip: '''

                **Loss Matrix**
...
