...

            ActivityButton(
              onPressed: () {
                rSource(context, ref, 'model_template');
                rSource(context, ref, 'model_build_cluster');
              },
              child: const Text('Build Clustering'),
            ),
          ],
        ),
      ],
    );
  }
...
